--- a/client/fields.jade
+++ b/client/fields.jade
@@ -256,7 +256,7 @@ template(name='textarea_view')
             //-     |#{key}
             //- else
             //-     |#{this}            
-        .ui.inline.header {{nl2br field_value}}
+        .f6 {{nl2br field_value}}
 
 template(name='textarea_edit')
     .ui.form
