--- a/client/reservations.jade
+++ b/client/reservations.jade
@@ -92,15 +92,38 @@ template(name='reservation_view')
                     with rental
                         +image_view key='image' label='image' direct=true
                 .eight.wide.column 
-                    .ui.header rental: #{rental.title} $#{rental.hourly_rate}/hr
+                    a.ui.header(href="/rental/#{rental._id}/view") rental: #{rental.title} $#{rental.hourly_rate}/hr
                     .ui.small.header start date #{start_date}
-                    .ui.small.header start date #{start_time}
-                    .ui.small.header submitted #{submitted}
+                    .ui.small.header start time #{start_time}
+                    +date_view key='start_date' label='start date' direct=true
+                    +time_view key='start_time' label='start time' direct=true
+                    +number_view key='minute_duration' label='minute duration' direct=true
+                    +number_view key='hour_duration' label='hour duration' direct=true
+                    .ui.header estimated cost #{hour_duration}*#{rental.hourly_rate} = $#{estimated_cost}
+                    if submitted
+                        .ui.green.header submitted {{ from_now submitted_timestamp }}
                     +reservation_events
+                .four.wide.column
+                    .ui.header staff checkout assessment
+                    .ui.header staff checkin assessment
+
+
+
+
+
 
 template(name='reservation_events')
-    .ui.header reservation events
+    .ui.header
+        i.rss.icon
+        |reservation events
+    .ui.bulleted.list
+        each log_events
+            .item #{text} #{when}
 
+    
+    
+    
+    
     
 template(name='reservation_edit')
     with current_doc
@@ -109,14 +132,14 @@ template(name='reservation_edit')
                 .four.wide.column 
                     .ui.header 
                         |edit reservation
-                    a.ui.big.fluid.button(href="/rental/#{_id}/view" title='save')
+                    a.ui.big.fluid.button(href="/reservation/#{_id}/view" title='save')
                         i.checkmark.large.green.icon
                         |save
                     +remove_button
                     with rental
                         +image_view key='image' label='image' direct=true
                 .eight.wide.column 
-                    .ui.header reserve #{rental.title}
+                    a.ui.header(href="/rental/#{rental._id}/view") reserve #{rental.title}
                     .ui.big.button now
                     .ui.big.button later
                     .ui.header duration
@@ -130,4 +153,12 @@ template(name='reservation_edit')
                     +number_edit key='hour_duration' label='hour duration' direct=true
                     .ui.header estimated cost #{hour_duration}*#{rental.hourly_rate} = $#{estimated_cost}
                     .ui.header final cost will be based on actual checked out time.  
-                    .ui.big.button.submit_reservation submit
+                    unless submitted
+                        .ui.big.green.fluid.button.submit_reservation 
+                            i.sign.in.alternate.icon
+                            |submit
+                    else
+                        .ui.header submitted {{ from_now submitted_timestamp }}
+                        .ui.orange.button.unsubmit
+                            i.undo.icon
+                            |unsubmit
