--- a/client/styles.css
+++ b/client/styles.css
@@ -100,7 +100,8 @@ body {
 }
 .zoom:hover {
     filter: drop-shadow(2px 2px 5px rgba(200,200,200,.7)) !important;
-    transform: scale(1.1) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.5) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    z-index:1000 !important;
 }
 
 .checking_in_area {
@@ -343,7 +344,14 @@ input.username_search{
 .button.green {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
     /* box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important; */
-    background-color: green !important;
+    background-color: darkgreen !important;
+    color: white !important;
+    /* transform: translate(0, 4px); */
+}
+.button.orange {
+    /* background-color: rgba(200, 200, 200, 0.5) !important; */
+    /* box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important; */
+    background-color: darkorange !important;
     color: white !important;
     /* transform: translate(0, 4px); */
 }
