--- a/components/commerce/rental.jade
+++ b/components/commerce/rental.jade
@@ -5,15 +5,14 @@ template(name='rentals')
                 i.left.chevron.icon
                 .ui.inline.header back
         .row
-            .four.wide.column
+            .six.wide.column
                 .ui.header 
                     i.clock.grey.icon        
                     |rentals
                 +rental_cloud
-            .twelve.wide.column.scrolling
-                .ui.stackable.three.cards
-                    each rentals
-                        +rental_card_template
+            .ten.wide.column
+                each rentals
+                    +rental_card_template
 
 
 template(name='rental_edit')
@@ -28,7 +27,7 @@ template(name='rental_edit')
                         i.checkmark.large.green.icon
                         |save
                     +remove_button
-                    +image_edit key='image' label='image' direct=true
+                    +image_edit key='picture' label='image' direct=true
                 .eight.wide.column 
                     +text_edit key='title' direct=true
                     +html_edit key='description' label='content' icon='content' direct=true
@@ -55,10 +54,11 @@ template(name='rental_view')
                         |rentals
                     .ui.header viewing rental
                     if can_edit
-                        a.ui.big.button(href="/rental/#{_id}/edit")
+                        a.ui.fluid.button(href="/rental/#{_id}/edit")
                             i.pencil.icon
                             |edit
                     +image_view key='image' label='image' direct=true
+                    +image_view key='picture' label='image' classes='zoom' direct=true
                     +voting_full
                     +viewing
                     +comments
@@ -70,6 +70,7 @@ template(name='rental_view')
                     +single_user_view key='resident' label='resident' direct=true
                     +text_view key='contact_info' label='contact info' icon='info' direct=true
                     +rental_transactions
+                    +rental_reservations
                 .four.wide.column 
                     +boolean_view key='set_duration' label='set duration' direct=true
                     if set_duration
@@ -78,10 +79,45 @@ template(name='rental_view')
                     +boolean_view key='variable_price' label='variable price' direct=true
                     div
                     +rental_status
+                    +rental_finance
+                    +rental_stats
                     //- +rental
                     //- +rental_history
                     //- +rental_subscription
                     //- +rental_time
+
+
+template(name='rental_finance')
+    div
+    .ui.inline.header 
+        i.money.grey.icon
+        |rental finance
+    i.circular.link.refresh.icon.refresh_rental_finance_stats
+    .ui.small.header total earnings
+    .ui.small.header upcoming earnings
+    .ui.small.header initial cost
+    .ui.small.header maintenance costs/payments
+
+
+template(name='rental_stats')
+    div
+    .ui.inline.header 
+        i.line.chart.grey.icon
+        |rental stats
+    i.circular.link.refresh.icon.refresh_rental_finance_stats
+    .ui.small.header total earnings
+    .ui.small.header rental ranking #reservations
+    .ui.small.header rental ranking $ earned
+    .ui.small.header # different renters
+    .ui.small.header avg rental time
+    .ui.small.header avg daily earnings
+    .ui.small.header avg weekly earnings
+    .ui.small.header avg monthly earnings
+    .ui.small.header biggest renter
+    .ui.small.header predicted payback duration 
+    .ui.small.header predicted payback date 
+    
+
 
 
 template(name='rental_status')
@@ -100,8 +136,8 @@ template(name='rental_card_template')
                 a.ui.inline.header(href="/kiosk_rental_view/#{_id}") #{title} 
                     if variable_price
                         |~
-                    .ui.label $#{hourly_rate}/hr
-                    .ui.label $#{daily_rate}/day
+                    .ui.basic.label $#{hourly_rate}/hr
+                    .ui.basic.label $#{daily_rate}/day
         .row
             .four.wide.column
                 a.zoom(href="/rental/#{_id}/view")
@@ -113,11 +149,11 @@ template(name='rental_card_template')
                 div
                 .ui.grey.inline.header location
                 each location_tags
-                    .ui.label #{this}
+                    .ui.basic.label #{this}
                 div
                 .ui.grey.inline.header tags
                 each tags
-                    .ui.label #{this}
+                    .ui.basic.label #{this}
                 +single_user_view key='resident' label='resident' direct=true
                 //- div
                 //- +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
@@ -194,7 +230,7 @@ template(name='rental_cal')
 template(name='month_day_template')
     .column
         a(href="/shop/#{product._id}/daily_calendar/#{month}/#{day}/#{year}") #{this}
-        .ui.label(title='reservations') #{reservation_count}
+        .ui.basic.label(title='reservations') #{reservation_count}
         //- if reservation_exists
         //-     //- with reservation_exists
         //-         |#{_id}
@@ -297,6 +333,8 @@ template(name='kiosk_rental_view')
                     .item $#{hourly_rate}/hr
                     .item $#{daily_rate}/day
                     .item #{views} views
+                +rental_transactions
+                +rental_reservations
                 if is_admin
                     +edit_button
                 +comments
@@ -337,5 +375,13 @@ template(name='rental_small')
 
 template(name='rental_transactions')
     .ui.header 
-        i.transaction.icon
+        i.exchange.icon
         |rental transactions
+    each transactions
+        a.ui.header(href="/transaction/#{_id}/view") #{when} by #{_author_username}
+template(name='rental_reservations')
+    .ui.header 
+        i.clock.icon
+        |rental reservations
+    each reservations
+        a.ui.header(href="/reservation/#{_id}/view") #{when} by #{_author_username}
