first round of market combined view preparing for all market types but now using rentals, build off rentals, pushing the rest, move to posts, make it funny and fun and useful and powerful

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -1,9 +1,9 @@
 template(name='comments')
-    div
+    //- div
     //- +ismall name='comments' classes='ui middle aligned image'
     //- i.comments.icon
-    .ui.inline.grey.header
-        |comments
+    //- .ui.inline.grey.header
+    //-     |comments
     div
     if currentUser
         .ui.fluid.icon.large.transparent.input
