--- a/client/fields.jade
+++ b/client/fields.jade
@@ -52,7 +52,7 @@ template(name='icon_edit')
     div
     if icon
         i.grey.icon(class=icon)
-        +i name=icon classes='ui middle aligned image'
+        //- +i name=icon classes='ui middle aligned image'
     .ui.inline.header
         if title
             |#{title}
@@ -62,7 +62,7 @@ template(name='icon_edit')
             |#{this}    
     if field_value
         i.large.icon(class=field_value)
-        img(src="https://img.icons8.com/ios/48/000000/#{field_value}.png")
+        //- img(src="https://img.icons8.com/ios/48/000000/#{field_value}.png")
     .ui.right.icon.input
         input.icon_val(type='text' value=field_value placeholder='icon8 class' autocomplete="off")
 
