--- a/client/resident_portal.jade
+++ b/client/resident_portal.jade
@@ -142,12 +142,12 @@ template(name='chat_small')
         .ui.header chat
     
 
-template(name='market_small')
-    .ui.header 
-        +i name='shop'
-        |market
-    each market_items
-        .ui.small.header #{title}
+//- template(name='market_small')
+//-     .ui.header 
+//-         +i name='shop'
+//-         |market
+//-     each market_items
+//-         .ui.small.header #{title}
 
 
 template(name='published_resident_small')
