--- a/components/maintenance/staff.jade
+++ b/components/maintenance/staff.jade
@@ -8,8 +8,8 @@ template(name='staff')
                 //-     |staff
                 //- i.massive.loading.brown.poo.icon
                 a.ui.large.fluid.basic.button(href='/add_resident')
-                    //- i.user.add.large.icon
-                    +i name='plus' classes='ui inline mini image'
+                    i.user.add.large.icon
+                    //- +i name='plus' classes='ui inline mini image'
                     strong
                         |resident
                 //- .ui.header
@@ -30,8 +30,8 @@ template(name='staff')
     
                 //- +add_button model='work_order' label='work order'
                 //- +add_button model='communication' label='communication'
-                +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
-                +add_button model='shift_checklist' label='shift checklist'
+                //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
+                //- +add_button model='shift_checklist' label='shift checklist'
                 +unit_key_widget
                 a.ui.compact.fluid.large.button(href='readings')
                     +ismall name='water' classes='ui inline image'                
