--- a/components/profile/profile.jade
+++ b/components/profile/profile.jade
@@ -67,55 +67,55 @@ template(name='user_layout')
                                 +ismall name='treadmill' classes='ui inline image'
                                 |healthclub
                     if is_member
-                        a.ui.large.button(href="/user/#{username}/dashboard" class="{{isActiveRoute 'user_dashboard'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/dashboard" class="{{isActiveRoute 'user_dashboard'}}")
                             +ismall name='dashboard' classes='ui inline image'
                             |dashboard
-                        a.ui.large.button(href="/user/#{username}/about" class="{{isActiveRoute 'user_about'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/about" class="{{isActiveRoute 'user_about'}}")
                             +ismall name='info' classes='ui inline image'
                             |info
-                        a.ui.large.button(href="/user/#{username}/social" class="{{isActiveRoute 'user_social'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/social" class="{{isActiveRoute 'user_social'}}")
                             +ismall name='collaboration' classes='ui inline image'
                             |social
-                        a.ui.large.button(href="/user/#{username}/gallery" class="{{isActiveRoute 'user_gallery'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/gallery" class="{{isActiveRoute 'user_gallery'}}")
                             +ismall name='gallery' classes='ui inline image'
                             |gallery
-                        a.ui.large.button(href="/user/#{username}/connections" class="{{isActiveRoute 'user_connections'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/connections" class="{{isActiveRoute 'user_connections'}}")
                             +ismall name='star' classes='ui inline image'
                             |connections
-                        a.ui.large.button(href="/user/#{username}/bookmarks" class="{{isActiveRoute 'user_bookmarks'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/bookmarks" class="{{isActiveRoute 'user_bookmarks'}}")
                             +ismall name='star' classes='ui inline image'
                             |bookmarks
-                        a.ui.large.button(href="/user/#{username}/contact" class="{{isActiveRoute 'user_contact'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/contact" class="{{isActiveRoute 'user_contact'}}")
                             +ismall name='phone' classes='ui inline image'
                             |contact
-                        a.ui.large.button(href="/user/#{username}/events" class="{{isActiveRoute 'user_events'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/events" class="{{isActiveRoute 'user_events'}}")
                             +ismall name='calendar' classes='ui inline image'
                             |calendar
-                        a.ui.large.button(href="/user/#{username}/comparison" class="{{isActiveRoute 'user_comparison'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/comparison" class="{{isActiveRoute 'user_comparison'}}")
                             +ismall name='scales' classes='ui inline image'
                             |comparison
-                        a.ui.large.button(href="/user/#{username}/tags" class="{{isActiveRoute 'user_tags'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/tags" class="{{isActiveRoute 'user_tags'}}")
                             +ismall name='tags' classes='ui inline image'
                             |tags
-                        a.ui.large.button(href="/user/#{username}/tasks" class="{{isActiveRoute 'user_tasks'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/tasks" class="{{isActiveRoute 'user_tasks'}}")
                             +ismall name='tasks' classes='ui inline image'
                             |tasks
-                        a.ui.large.button(href="/user/#{username}/messages" class="{{isActiveRoute 'user_messages'}}")
-                            +ismall name='envelope' classes='ui inline image'
+                        a.ui.large.compact.button(href="/user/#{username}/messages" class="{{isActiveRoute 'user_messages'}}")
+                            +ismall name='new-message' classes='ui inline image'
                             |mail
-                        a.ui.large.button(href="/user/#{username}/karma" class="{{isActiveRoute 'user_karma'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/karma" class="{{isActiveRoute 'user_karma'}}")
                             +ismall name='yin-yang' classes='ui inline image'
                             |karma
-                        a.ui.large.button(href="/user/#{username}/workhistory" class="{{isActiveRoute 'user_workhistory'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/workhistory" class="{{isActiveRoute 'user_workhistory'}}")
                             +ismall name='resume' classes='ui inline image'
                             |work history
-                        a.ui.large.button(href="/user/#{username}/stats" class="{{isActiveRoute 'user_stats'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/stats" class="{{isActiveRoute 'user_stats'}}")
                             +ismall name='line-chart' classes='ui inline image'
                             |stats
-                        a.ui.large.button(href="/user/#{username}/votes" class="{{isActiveRoute 'user_votes'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/votes" class="{{isActiveRoute 'user_votes'}}")
                             +ismall name='elections' classes='ui inline image'
                             |votes
-                        a.ui.large.button(href="/user/#{username}/notifications" class="{{isActiveRoute 'user_notifications'}}")
+                        a.ui.large.compact.button(href="/user/#{username}/notifications" class="{{isActiveRoute 'user_notifications'}}")
                             +ismall name='appointment-reminders' classes='ui inline image'
                             |notifications
                         div
