--- a/components/maintenance/healthclub.jade
+++ b/components/maintenance/healthclub.jade
@@ -64,7 +64,7 @@ template(name='healthclub')
                                                 .item fri 7a-9p
                                                 .item sat 8a-9p
                                                 .item sun 8a-10p
-                                            .ui.header Onsite Manager 
+                                            .ui.header onsite manager 
                                             .ui.small.header Rick Hamp 
                                             .ui.relaxed.large.list
                                                 .item 303-545-1787
